# ASDMatch

./: .gitignore  CMakeLists.txt  README.md  main.cpp  result.txt
config/: CMakeLists.txt  config.h
executable/: CMakeLists.txt  prepare.cpp
matching/: CMakeLists.txt  adaptive.cpp  adaptive.h  join.cpp  join.h
plan/: CMakeLists.txt  decomposition.cpp  decomposition.h  estimator.cpp  estimator.h  optimizer.cpp  optimizer.h  subset_structure.cpp  subset_structure.h
relation/: CMakeLists.txt  candidate_space.cpp  candidate_space.h  dynamic_array.cpp  dynamic_array.h  graph.cpp  graph.h  relation.cpp  relation.h
utility/: CMakeLists.txt  clique.cpp  clique.h  command.cpp  command.h  command_parser.cpp  command_parser.h  compute_set_intersection.cpp  compute_set_intersection.h  utils.cpp  utils.h
utility/td/: CMakeCache.txt  CMakeLists.txt  SCsolver.cpp  cmake_install.cmake  dataloader.cpp  hypergraph.cpp  hypergraph.h  nohup.out  preprocessing.cpp  preprocessing.h  preprocessing.hpp  td.cpp  td_utils.hpp  twbound.cpp  utils.cpp
utility/td/glpk-4.55/: Makefile  config.status
utility/td/glpk-4.55/examples/: Makefile  glpsol
utility/td/glpk-4.55/examples/.libs/: glpsol
utility/td/glpk-4.55/src/: Makefile  libglpk.la
utility/td/glpk-4.55/src/.libs/: libglpk.36.dylib  libglpk.lai
utility/td/glpk-4.55/src/.libs/libglpk.36.dylib.dSYM/Contents/Resources/DWARF/: libglpk.36.dylib
